<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.infoworks.lab</groupId>
    <artifactId>java-foundation-kit</artifactId>
    <packaging>jar</packaging>
    <version>v1.0.2</version>

    <properties>
        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Set: [2.9.10.5, 2.18.3) to Jackson.Version, To use with JDK 17 or latest -->
        <jackson.version>[2.9.10.5, 2.18.3]</jackson.version>
    </properties>

    <repositories>
        <!-- Maven-Central -->
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <!-- JitPack -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>
        <!-- Jackson JSON Processor -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${jackson.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${jackson.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt</artifactId>
            <version>0.13.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- Spring Web Client API -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>[5.0.4.RELEASE, 5.3.39]</version>
            <scope>provided</scope>
        </dependency>
        <!-- Spring WebSocket Client API-->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-websocket</artifactId>
            <version>[5.0.4.RELEASE, 5.3.39]</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-messaging</artifactId>
            <version>[5.0.4.RELEASE, 5.3.39]</version>
            <scope>provided</scope>
        </dependency>
        <!-- -->
        <!-- Test Suits Starts -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <!-- This version compatible with Java-(11,17,21] Or the latest version -->
            <version>32.1.3-jre</version>
            <scope>test</scope>
        </dependency>
        <!-- MySQL -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.28</version>
            <scope>test</scope>
        </dependency>
        <!-- H2DB -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <!--<version>1.4.200</version>-->
            <version>2.2.220</version>
            <scope>test</scope>
        </dependency>
        <!-- PostgreSQL -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.5</version>
            <scope>test</scope>
        </dependency>
        <!-- A Wrapper API for All Kind of JDBC & JPA-Entity-Manager & Cassandra Calls -->
        <dependency>
            <groupId>com.github.itsoulltd</groupId>
            <artifactId>JSQLEditor</artifactId>
            <version>v1.1.5.8-RELEASE</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.lettuce/lettuce-core -->
        <dependency>
            <groupId>io.lettuce</groupId>
            <artifactId>lettuce-core</artifactId>
            <version>6.2.0.RELEASE</version>
            <scope>test</scope>
        </dependency>
        <!-- Redis-Client -->
        <dependency>
            <groupId>org.redisson</groupId>
            <artifactId>redisson</artifactId>
            <version>3.11.1</version>
            <scope>test</scope>
        </dependency>
        <!-- https://projects.eclipse.org/projects/ee4j.tyrus -->
        <!-- https://mvnrepository.com/artifact/org.glassfish.tyrus.bundles/tyrus-standalone-client -->
        <dependency>
            <groupId>org.glassfish.tyrus.bundles</groupId>
            <artifactId>tyrus-standalone-client</artifactId>
            <version>1.18</version>
            <scope>test</scope>
        </dependency>
        <!-- -->
        <!-- EclipseStore v2.x Java11+ -->
        <!-- EclipseStore v3.x required Java17+ -->
        <dependency>
            <groupId>org.eclipse.store</groupId>
            <artifactId>storage-embedded</artifactId>
            <version>2.1.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.store</groupId>
            <artifactId>storage-embedded-configuration</artifactId>
            <version>2.1.3</version>
            <scope>test</scope>
        </dependency>
        <!-- EclipseStore external clients example -->
        <dependency>
            <groupId>org.eclipse.serializer</groupId>
            <artifactId>persistence-binary-jdk8</artifactId>
            <version>2.1.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.store</groupId>
            <artifactId>afs-sql</artifactId>
            <version>2.1.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.store</groupId>
            <artifactId>afs-redis</artifactId>
            <version>2.1.3</version>
            <scope>test</scope>
        </dependency>
        <!-- -->
        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>[4.5.12, )</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5/5.5.2 -->
        <!-- httpclient5 works from Spring-6+ -->
        <!--<dependency>
            <groupId>org.apache.httpcomponents.client5</groupId>
            <artifactId>httpclient5</artifactId>
            <version>[5.5.1, )</version>
            <scope>test</scope>
        </dependency>-->
        <!-- Test Suits Ends -->
        <!--Apache POI-excel-parser (Test-Suit-Only) -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>4.1.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>4.1.2</version>
            <scope>test</scope>
        </dependency>
        <!-- Apache POI-streaming-api (v2.2.0 has hard-dependency on poi v4.1.2) -->
        <dependency>
            <groupId>com.monitorjbl</groupId>
            <artifactId>xlsx-streamer</artifactId>
            <version>2.2.0</version>
            <scope>test</scope>
        </dependency>
        <!-- -->
    </dependencies>

    <build>
        <plugins>
            <!--Upgrade to new maven compiler plugins -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
            </plugin>
            <!-- -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.3</version>
                <configuration>
                    <excludes>
                        <exclude>iResourcesTest.java</exclude>
                        <exclude>iPropertiesTest.java</exclude>
                        <exclude>OutboxPatternTest.java</exclude>
                        <exclude>OrchestratedSagaTest.java</exclude>
                        <exclude>ChoreographedSagaTest.java</exclude>
                        <exclude>ObjectMapperTest.java</exclude>
                        <exclude>TableMapperTest.java</exclude>
                        <exclude>MemCacheTest.java</exclude>
                        <exclude>LettuceDataSourceTest.java</exclude>
                        <exclude>RedissonDataSourceTest.java</exclude>
                        <exclude>iFileStoreTest.java</exclude>
                        <exclude>com.infoworks.utils.rest.client.RestTaskTest.java</exclude>
                        <exclude>com.infoworks.utils.rest.client.DownloadTaskTest.java</exclude>
                        <exclude>com.infoworks.utils.rest.client.FileUploadTaskTest.java</exclude>
                        <exclude>com.infoworks.utils.rest.spring.RestTaskTest.java</exclude>
                        <exclude>com.infoworks.utils.rest.spring.DownloadTaskTest.java</exclude>
                        <exclude>SpringWebSocketTest.java</exclude>
                        <exclude>DataRestClientTest.java</exclude>
                        <exclude>HttpDataRestClientTest.java</exclude>
                        <exclude>EclipseDataStoreTest.java</exclude>
                        <exclude>ExcelReadWriteTest.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <!-- -->
        </plugins>
    </build>

</project>